apps/gatus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
  - hosts:
    - gatus.home.bstjohn.net
    secretName: wildcard-home-tls
  rules:
  - host: gatus.home.bstjohn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gatus
            port:
              number: 8080
